--- a/css/style.css
+++ b/css/style.css
@@ -298,13 +298,13 @@ body {
   transition: transform 1s, opacity 1s;
 }
 .islands__card-img--first {
-  background-image: linear-gradient(45deg, rgba(8, 206, 255, 0.75), rgba(8, 24, 255, 0.75)), url("../img/card1.jpg");
+  background-image: url("../img/card1.jpg");
 }
 .islands__card-img--second {
-  background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/card2.jpg");
+  background-image: url("../img/card2.jpg");
 }
 .islands__card-img--third {
-  background-image: linear-gradient(45deg, rgba(190, 10, 214, 0.75), rgba(68, 0, 255, 0.75)), url("../img/card3.jpg");
+  background-image: url("../img/card3.jpg");
 }
 .islands__card-img-title {
   font-family: "Dancing Script", cursive;
